# Ascend-mstx

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  build.py  dependencies.json  download_dependencies.py  setup.py
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
c/: CMakeLists.txt  ms_tools_ext.cpp
c/include/mstx/: ms_tools_ext.h  ms_tools_ext_mem.h
c/include/mstx/mstx_detail/: mstx_impl.h  mstx_impl_core.h  mstx_init_defs.h  mstx_types.h
cmake/: options.cmake
docs/zh/: mstx_api_reference.md  mstx_install_guide.md
docs/zh/api_reference/: mstx_api_reference.md
docs/zh/contributing/: contributing_guide.md
docs/zh/development_guide/: develop_guide.md
docs/zh/install_guide/: mstx_install_guide.md
docs/zh/legal/: disclaimer.md  license_notice.md  security_statement.md  vulnerability_handling_procedure.md
docs/zh/release_notes/: release_notes.md
python/: CMakeLists.txt  mstx_api.cpp  mstx_api.h  mstx_methods.cpp  mstx_methods.h  py_init_mstx.cpp
test/c/: CMakeLists.txt  injection_stub.cpp  test_c_cpp_lib.cpp  test_core.cpp  test_core_api.c
test/python/: test_mstx_with_init.py  test_mstx_without_init.py
test/scripts/: generate_coverage.sh
